<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnvioDatos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_input">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/title"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/confirmar_datos"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/txtNombre"
            android:layout_margin="@dimen/margin_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/params"
            android:textColor="@color/colorSecondaryText"
            android:drawableLeft="@drawable/ic_user"
            android:text="@string/confirmar_nombre"/>

        <TextView
            android:id="@+id/txtNacimiento"
            android:layout_margin="@dimen/margin_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/params"
            android:textColor="@color/colorSecondaryText"
            android:drawableLeft="@drawable/ic_birthday"
            android:text="@string/confirmar_nacimiento"/>

        <TextView
            android:id="@+id/txtTelefono"
            android:layout_margin="@dimen/margin_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/params"
            android:textColor="@color/colorSecondaryText"
            android:drawableLeft="@drawable/ic_phone"
            android:text="@string/confirmar_telefono"/>

        <TextView
            android:id="@+id/txtEmail"
            android:layout_margin="@dimen/margin_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/params"
            android:textColor="@color/colorSecondaryText"
            android:drawableLeft="@drawable/ic_email"
            android:text="@string/confirmar_email"/>

        <TextView
            android:id="@+id/txtDesc"
            android:layout_margin="@dimen/margin_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/params"
            android:textColor="@color/colorSecondaryText"
            android:drawableLeft="@drawable/ic_create"
            android:text="@string/confirmar_desc"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_input">

            <Button
                android:id="@+id/btnEditar"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:elevation="5dp"
                android:shadowRadius="20"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/boton_editar"
                android:theme="@style/MyButtonRaised"
                android:textSize="@dimen/button_text" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>